Atualizacao dos scripts

--- a/scripts/ex01.ipynb
+++ b/scripts/ex01.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aplicação de Python na Agrometeorologia - Exercício 1\n",
+    "# Aplicação de Python na Agrometeorologia\n",
     "\n",
     "Este Jupyter Notebook é parte integrande do curso de Python ministrado durante XXII Congresso Brasiliero de Agrometeorologia realizado nos dias 3, 4 e 5 de outubro de 2023 na cidade Natal/RN."
    ]
@@ -1774,8 +1774,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "df.to_csv(\n",
     "    '../output/chuva_diaria_cpc_19910901_20221231.csv', \n",
     "    sep=',', \n",
