--- a/scripts/ex19.ipynb
+++ b/scripts/ex19.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tratamento de dado ausente"
+    "# Aplicação de Python na Agrometeorologia\n",
+    "\n",
+    "Este Jupyter Notebook é parte integrande do curso de Python ministrado durante XXII Congresso Brasiliero de Agrometeorologia realizado nos dias 3, 4 e 5 de outubro de 2023 na cidade Natal/RN."
    ]
   },
   {
@@ -2856,13 +2858,6 @@
    ],
    "source": [
     "df.fillna(df.median())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fim"
    ]
   }
  ],
