--- a/scripts/bonus_funcoes.ipynb
+++ b/scripts/bonus_funcoes.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,23 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "chuva = processa_chuva(\n",
-    "    lista_arquivos='../input/precipitacao/CPC/precip.????.nc', \n",
+    "    lista_arquivos='../../input/precipitacao/CPC/precip.????.nc', \n",
     "    nome_variavel='precip', \n",
     "    nome_dimensao_lat='lat', \n",
     "    nome_dimensao_lon='lon', \n",
-    "    arquivo_shapefile='../input/shapefile/caatinga_contorno/caatinga.shp',\n",
-    "    nome_arquivo_csv='../output/xchuva_diaria_cpc_19910901_20221231.csv'\n",
+    "    arquivo_shapefile='../../input/shapefile/caatinga_contorno/caatinga.shp',\n",
+    "    nome_arquivo_csv='../../output/xchuva_diaria_cpc_19910901_20221231.csv'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[11688 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "<AxesSubplot:xlabel='Dia'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
