--- a/scripts/ex19.ipynb
+++ b/scripts/ex19.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Valore percentual de NAN para a coluna temperatura.\n",
+    "# Valor percentual de NAN para a coluna temperatura.\n",
     "\n",
     "total_NAN = df['Temperatura'].isnull().sum()\n",
     "\n",
